# iu_carrige

./: .gitignore  Dockerfile  compose.yml  dev.Dockerfile  main.py  need.env  prod.Dockerfile  pyproject.toml
.run/: compose.yml_ Compose Deployment.run.xml
deployment/: base.yaml  deployment.yaml  postgres-test-deployment.yaml  postgres-test-service.yaml  redis-test-deployment.yaml  redis-test-service.yaml  service.yaml
iu_carrige/: __init__.py  events.py
iu_carrige/api/: __init__.py  core.py  datamodels.py
iu_carrige/api/routes/: __init__.py  cache.py  core.py  hash.py  include.py  source.py  tags.py  vein.py
iu_carrige/database/: core.py
iu_carrige/database/methods/: base.py
iu_carrige/database/redis/: __init__.py  core.py
iu_carrige/database/redis/methods/: core.py
iu_carrige/database/sql/: __init__.py  core.py  models.py
iu_carrige/database/sql/methods/: __init__.py  base.py  include.py  mineral.py  source.py  tags.py  vein.py
iu_carrige/subs/: sql.py
iu_carrige/utils/: __init__.py  serelization.py
tests/: conftest.py  test_cache.py  test_core.py  test_mineral.py
tests/ready/: init_s3.py
